Remove multiple projects

--- a/new/index.html
+++ b/new/index.html
@@ -245,7 +245,6 @@
 							</div>
 						</div>
 					</div>
-					<br>
 					<div class="row">
 						<div class="col-md-6">
 							<div class="intern-box wow fadeInLeft">
@@ -280,7 +279,9 @@
 									</div>
 								</div>
 							</div>
-							<div class="intern-box wow fadeInLeft">
+						</div>
+						<div class="col-md-6">
+							<div class="intern-box wow fadeInRight">
 								<div class="row">
 									<div class="col-sm-4">
 										<div class='intern-panel-image'>
@@ -472,7 +473,7 @@
 											</div>
 										</div>
 										<div class='panel-body'>
-											Simple Python script to get the meaning of any word, with disambiguations, directly in the terminal.<br><br>
+											Fun Python script to get the meaning of any word, with disambiguations, directly in the terminal.<br><br>
 											<strong><a href="https://github.com/AnirudhGoel/terminal-dictionary" target='_blank'>Github</a></strong>
 										</div>
 										<div class='panel-footer'>
@@ -482,27 +483,6 @@
 								</div>
 							</div>
 							<div class='col-sm-4 wow fadeInUp' align="center">
-								<img src="img/projects/cgi.jpg" alt='py on XAMPP' class='thumbnail proj-img'>
-								<div class='proj-panel'>
-									<div class='panel'>
-										<div class='panel-heading'>
-											<div class='proj-panel-heading'>
-												<strong>
-													Run .py on XAMPP
-												</strong>
-											</div>
-										</div>
-										<div class='panel-body'>
-											A step by step guide to configure XAMPP and modify Python files to run them as CGI on XAMPP, similar to PHP files. It can be particularly useful when you want to make some quick APIs in Python without using any Framework.<br><br>
-											<strong><a href="https://github.com/AnirudhGoel/run-py-as-cgi-on-apache.git" target='_blank'>Github</a></strong>
-										</div>
-										<div class='panel-footer'>
-											Python
-										</div>
-									</div>
-								</div>
-							</div>
-							<div class='col-sm-4 wow fadeInRight' align="center">
 								<img src="img/projects/stock.jpg" alt='Stock Monitor and Portfolio Manager' class='thumbnail proj-img'>
 								<div class='proj-panel'>
 									<div class='panel'>
@@ -519,115 +499,6 @@
 										</div>
 										<div class='panel-footer'>
 											PHP, API, JS, HTML5, CSS3, Bootstrap
-										</div>
-									</div>
-								</div>
-							</div>
-						</div>
-					</div>
-					<div class="proj-text">
-						<div class="row">							
-							<div class='col-sm-4 wow fadeInLeft' align="center">
-								<img src="img/projects/store.png" alt='Online Store APIs' class='thumbnail proj-img'>
-								<div class='proj-panel'>
-									<div class='panel'>
-										<div class='panel-heading'>
-											<div class='proj-panel-heading'>
-												<strong>
-													Online Store APIs
-												</strong>
-											</div>
-										</div>
-										<div class='panel-body'>
-											A set of PHP APIs ready to be used with an <strong>Online Store Mobile App</strong> with verification and automated setup. Also, provides sample data and simple testing platform to test various functionalities of the API.<br><br>
-											<strong><a href="https://github.com/AnirudhGoel/Online-Store-API.git" target='_blank'>Github</a></strong>
-										</div>
-										<div class='panel-footer'>
-											PHP, MySQL, AJAX, HTML5, CSS3, Bootstrap
-										</div>
-									</div>
-								</div>
-							</div>
-							<div class='col-sm-4 wow fadeInUp' align="center">
-								<img src="img/projects/timestamp.jpg" alt='Timestamp Converter' class='thumbnail proj-img'>
-								<div class='proj-panel'>
-									<div class='panel'>
-										<div class='panel-heading'>
-											<div class='proj-panel-heading'>
-												<strong>Timestamp Converter</strong>
-											</div>
-										</div>
-										<br>
-										<div class='panel-body'>
-											A fun project made by me during learning PHP. A web application for conversion of timestamp to readable date format. Some may not find a point in this, but believe me, as a back-end developer, I use it more than any other service.<br><br>
-											<strong><a href="https://github.com/AnirudhGoel/Timestamp-Converter.git" target='_blank'>Github</a> |
-											<a href="https://timestamp-convert.herokuapp.com/" target='_blank'>Demo</a></strong>
-										</div>
-										<br>
-										<div class='panel-footer'>
-											PHP, HTML5, CSS3, Bootstrap
-										</div>
-									</div>
-								</div>
-							</div>
-							<div class='col-sm-4 wow fadeInRight' align="center">
-								<img src="img/projects/social.jpg" alt='My Social Network' class='thumbnail proj-img'>
-								<div class='proj-panel'>
-									<div class='panel'>
-										<div class='panel-heading'>
-											<div class='proj-panel-heading'>
-												<strong>My Social Network</strong>
-											</div>
-										</div>
-										<div class='panel-body'>
-											This was project that I made while learning CSS.
-											A HTML and Vanilla CSS based project that demonstrates the link to all of my social network sites.<br><br>
-											<strong><a href="https://github.com/AnirudhGoel/My-Social-Network" target='_blank'>Github</a></strong>
-										</div>
-										<div class='panel-footer'>
-											HTML5, Vanilla CSS3
-										</div>
-									</div>
-								</div>
-							</div>
-						</div>
-					</div>
-					<div class="proj-text">
-						<div class="row">
-							<div class='col-sm-4 wow fadeInLeft' align="center">
-								<img src="img/projects/phottendance.png" alt='Phottendance' class='thumbnail proj-img'>
-								<div class='proj-panel'>
-									<div class='panel'>
-										<div class='panel-heading'>
-											<div class='proj-panel-heading'>
-												<strong>Phottendance</strong>
-											</div>
-										</div>
-										<div class='panel-body'>
-											I developed the web portal of this app that completely automates attendance taking. Just click a photograph of the class and rest is managed by app.<br><br>
-											<strong><a href="https://github.com/AnirudhGoel/Phottendance-Desktop-Web-Portal.git" target='_blank'>Github</a></strong>
-										</div>
-										<div class='panel-footer'>
-											Firebase BaAS, API, JS, HTML5, CSS3, Bootstrap
-										</div>
-									</div>
-								</div>
-							</div>
-							<div class='col-sm-4 wow fadeInUp' align="center">
-								<img src="img/projects/car-game.jpg" alt='Car Game C++' class='thumbnail proj-img'>
-								<div class='proj-panel'>
-									<div class='panel'>
-										<div class='panel-heading'>
-											<div class='proj-panel-heading'>
-												<strong>Car Game C++</strong>
-											</div>
-										</div>
-										<div class='panel-body'>
-											This project is a simple Car Game using C++ graphics.h library which I made by 3 hours continuous coding while learning C Graphics in college.<br><br>
-											<strong><a href="https://github.com/AnirudhGoel/Car-Game-C-Plus-Plus" target='_blank'>Github</a></strong>
-										</div>
-										<div class='panel-footer'>
-											C++
 										</div>
 									</div>
 								</div>
