Reformat Intern section

--- a/new/index.html
+++ b/new/index.html
@@ -219,7 +219,7 @@
 									<div class="col-sm-8" align="left">
 										<div class="intern-panel-body">
 											<div class="intern-box-heading" align="center">
-												<span style="font-size: 24px; padding-top: 10px; padding-bottom: 10px; display: block;"><a href="https://home.cern" target="_blank"><strong>CERN</strong></a></span>
+												<div class="org-name"><a href="https://home.cern" target="_blank"><strong>CERN</strong></a></div>
 												<br>
 												<div class="col-sm-6 intern-post"><strong>Summer Student</strong></div>
 												<div class="col-sm-6 intern-time">June '17 - Sept '17</div>
@@ -257,7 +257,7 @@
 									<div class="col-sm-8" align="left">
 										<div class="intern-panel-body">
 											<div class="intern-box-heading" align="center">
-												<span style="font-size: 24px; padding-top: 10px; padding-bottom: 10px; display: block;"><strong><a href="https://mozillians.org/en-US/u/Anirudhgoel.delhi/">Mozilla</a></strong></span>
+												<div class="org-name"><a href="https://mozillians.org/en-US/u/Anirudhgoel.delhi/" target="_blank"><strong>Mozilla</strong></a></div>
 												<br>
 												<div class="col-sm-6 intern-post">
 													<strong>
@@ -291,12 +291,13 @@
 									<div class="col-sm-8" align="left">
 										<div class="intern-panel-body">
 											<div class="intern-box-heading" align="center">
-												<span style="font-size: 24px; padding-top: 10px; padding-bottom: 10px; display: block;"><a href="http://mait.acm.org/"><strong>ACM</strong> MAIT</a></span>
+												<div class="org-name"><a href="http://mait.acm.org/" target="_blank"><strong>ACM</strong> MAIT</a></div>
 												<br>
 												<div class="col-sm-6 intern-post"><strong>Full Stack Developer</strong></div>
 												<div class="col-sm-6 intern-time">June '16 - Apr '17</div>
 											</div>
-											This is the ACM chapter of my college. Here I'm responsible for the development, deployment and maintenance of the website. I made the <a href="http://mait.acm.org/">Home Page</a> and <a href="http://mait.acm.org/contact_us.html">Contact Us</a> page and deployed the website to our server. The major challenges we overcame while remaking of the site were to make it completely responsive and keep its footprint to minimum, so do have a look at it to see how we succeeded!
+											<br><br>
+											This is the ACM chapter of my college. Here I was responsible for the development, deployment and maintenance of the website. I made the <a href="http://mait.acm.org/">Home Page</a> and <a href="http://mait.acm.org/contact_us.html">Contact Us</a> page and deployed the website to our server. The major challenges we overcame while remaking of the site were to make it completely responsive and keep its footprint to minimum.
 										</div>
 									</div>
 								</div>
