Change Technologies known to Technical Competencies

--- a/new/index.html
+++ b/new/index.html
@@ -514,7 +514,7 @@
 			<section class='page4'>
 				<br><br><br>
 				<div class='headings'>
-					Technologies Known
+					Technical Competencies
 				</div>
 				<br><br>
 				<div class="container">
