Update intro text

--- a/new/index.html
+++ b/new/index.html
@@ -188,7 +188,7 @@
 								<!-- </strong> -->
 								<!-- Hey friend, currently studying Bachelors of Technology (B. Tech.) at Maharaja Agrasen Institute of Technology, I'm a follower of my instinct and passion which leads me to have considerable knowledge in the fields of Web Development, Graphic Designing, Blogging and more. -->
 								<!-- Hey, I am a final-year student of Bachelor of Technology (B.Tech.) in Information Technology (IT) at Maharaja Agrasen Institute of Technology. -->
-								Hey, welcome to Anirudh Goel's space on the Internet. <br>Anirudh is an IT Engineer, CERN Summer Student who likes to Code, writes occasionally, is an avid reader, and loves Coffee <i class="fas fa-mug-hot"></i> and his MacBook <i class="fa fa-laptop"></i>.
+								Hey, welcome to Anirudh Goel's space on the Internet. <br>Anirudh is an IT Engineer and former CERN Summer Student. <br>He likes to code, is an avid reader, loves Coffee <i class="fa fa-coffee"></i> and his MacBook <i class="fa fa-laptop"></i>.
 							</div>
 						</div>
 						<div class='col-sm-1'></div>
