--- a/new/index.html
+++ b/new/index.html
@@ -198,7 +198,7 @@
 			</section>
 
 
-			<section class='page3 background--wave' data-parallax="scroll" data-image-src="img/back1.jpg">
+			<section class='page2 background--wave'>
 				<br>
 				<br>
 				<br>
@@ -309,7 +309,7 @@
 			</section>
 
 
-			<section class="page2">
+			<section class="page3">
 				<div class="container-fluid">
 					<br><br><br>
 					<div class="row reponsive">
