Change backgrounds of bottom 2 sections and add Parallax

--- a/index.html
+++ b/index.html
@@ -309,7 +309,7 @@
 			</section>
 
 
-			<section class="page3">
+			<section class="page3 parallax-window" data-parallax="scroll" data-image-src="img/back6.jpg">
 				<div class="container-fluid">
 					<br><br><br>
 					<div class="row reponsive">
@@ -511,7 +511,7 @@
 			</section>
 
 
-			<section class='page4'>
+			<section class="page4 parallax-window" data-parallax="scroll" data-image-src="img/back4.jpg">
 				<br><br><br>
 				<div class='headings'>
 					Technical Competencies
@@ -589,11 +589,10 @@
 		<script src="//ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 		<script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 		<script src="//use.fontawesome.com/768a40f80a.js"></script>
+		<script src="//cdn.jsdelivr.net/parallax.js/1.4.2/parallax.min.js"></script>
 
-		<!-- Can include these scripts for additional effects later -->
-		<!-- <script src="//cdn.jsdelivr.net/parallax.js/1.4.2/parallax.min.js"></script> -->
-		<!-- <script src="https://github.com/ivmello/easeScroll"></script> -->
 		<!-- EaseScroll doesn't support Safari as of now -->
+		<!-- <script src="https://github.com/ivmello/easeScroll"></script> -->
 
 		<script src="js/wow.min.js"></script>
 		<script src="js/script.js"></script>
