Updated PinterestAutomatic details

--- a/index.html
+++ b/index.html
@@ -331,7 +331,7 @@
 											</div>
 										</div>
 										<div class='panel-body'>
-											A Django based application that functions as a complete planner with features like event organizing, Google Calender Sync, weather details, on-screen clock, responsive design and a beautiful UI.<br><br>
+											A Django based application that functions as a <strong>complete planner</strong> with features like <strong>event organizing, Google Calender Sync, weather details, on-screen clock, responsive design and a beautiful UI</strong>.<br><br>
 											<strong><a href="https://github.com/AnirudhGoel/Calender" target='_blank'>Github</a> |
 											<a href="https://productive-calender.herokuapp.com/" target='_blank'>Demo</a></strong>
 										</div>
@@ -348,19 +348,18 @@
 										<div class='panel-heading'>
 											<div class='proj-panel-heading'>
 												<strong>
-													Pinterest Automatic
+													PinterestAutomatic
 												</strong>
 											</div>
 										</div>
 										<div class='panel-body'>
-											This is a webapp to Pin all images of one Pinterest Board to another automatically.
-											Login system is made using <strong>Pinterest OAuth 2.0</strong> Authorization process.
-											User doesn’t need to login every time. <strong>Cookies</strong> are used to remember user login for 7 days.<br><br>
-											<strong><a href="https://github.com/AnirudhGoel/PinterestAutomatic" target='_blank'>Github</a> |
-											<a href="https://pinterestautomatic.herokuapp.com/" target='_blank'>Demo</a></strong>
+											This is a webapp to <strong>pin all images of one Pinterest Board to another</strong> automatically. Hosted on Heroku, it uses <strong>Heroku Postgres as Database, flask-user package for User Management, Redis To Go server to store the pinning tasks in a queue</strong>.
+											The app is currently being used by <strong>50+ clients as a marketing tool</strong>. The app has been approved by Pinterest.
+											<br><br>
+											<strong><a href="https://pinterestautomatic.herokuapp.com/" target='_blank'>Live App</a></strong>
 										</div>
 										<div class='panel-footer'>
-											PHP, Pinterest API, Pinterest OAuth 2.0, Cookies, HTML5, CSS3, Bootstrap
+											Flask, Python, Redis To Go, Postgres, Pinterest API, Minimalistic UI, Pinterest OAuth 2.0, Bootstrap
 										</div>
 									</div>
 								</div>
