Add AV Experience and update PinAutomatic Details

--- a/index.html
+++ b/index.html
@@ -210,6 +210,41 @@
 								<div class="row">
 									<div class="col-sm-4">
 										<div class='intern-panel-image'>
+											<img src="img/av.svg" alt='Analytics Vidhya' class='intern-img img-responsive' style="height: 150px; margin-top: 40px; width: 250px;">
+										</div>
+									</div>
+									<div class="col-sm-8" align="left">
+										<div class="intern-panel-body">
+											<div class="intern-box-heading" align="center">
+												<div class="org-name"><a href="https://www.analyticsvidhya.com/" target="_blank"><strong>Analytics Vidhya</strong></a></div>
+												<br>
+												<div class="col-sm-6 intern-post"><strong>Full Stack Web Developer</strong></div>
+												<div class="col-sm-6 intern-time">June '18 - Feb '19</div>
+											</div>
+											<br><br>
+											<ul>
+												<li>Developed <strong>AV Analytics</strong></li>
+												<ul>
+													<li>Django based platform that records the complete journey of all users across <strong>company’s multiple platforms</strong>.</li>
+													<li>This data has helped to increase the <strong>customer acquisition by 54%</strong> and <strong>customer retention by 40%</strong>.</li>
+													<li>Accrued <strong>85 Million records (2 Billion data points)</strong> till date, that are being used for various purposes including analytics and behavioural analysis.</li>
+													<li>The service has been scaled from few hundred to few thousand users per day without requiring any changes.</li>
+												</ul>
+												<li>Setup pipeline using AWS Kinesis Data Stream to sync the users’ profiles across platforms to obtain a 360 degree view of all users.</li>
+											</ul>
+										</div>
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
+					<br>
+					<div class="row">
+						<div class="col-md-12">
+							<div class="cern-intern-box wow fadeInUp">
+								<div class="row">
+									<div class="col-sm-4">
+										<div class='intern-panel-image'>
 											<img src="img/intern/cern.png" alt='CERN' class='intern-img img-responsive' style="height: 150px; margin-top: 40px;">
 										</div>
 									</div>
@@ -348,15 +383,15 @@
 										<div class='panel-heading'>
 											<div class='proj-panel-heading'>
 												<strong>
-													PinterestAutomatic
+													PinAutomatic
 												</strong>
 											</div>
 										</div>
 										<div class='panel-body'>
 											This is a webapp to <strong>pin all images of one Pinterest Board to another</strong> automatically. Hosted on Heroku, it uses <strong>Heroku Postgres as Database, flask-user package for User Management, Redis To Go server to store the pinning tasks in a queue</strong>.
-											The app is currently being used by <strong>50+ clients as a marketing tool</strong>. The app has been approved by Pinterest.
+											Started as a hobby project, it has been approved by Pinterest is currently being used by <strong>100+ users and has re-pinned 200,000+ pins</strong> till date.
 											<br><br>
-											<strong><a href="https://pinterestautomatic.herokuapp.com/" target='_blank'>Live App</a></strong>
+											<strong><a href="https://pinautomatic.herokuapp.com/" target='_blank'>Live App</a></strong>
 										</div>
 										<div class='panel-footer'>
 											Flask, Python, Redis To Go, Postgres, Pinterest API, Minimalistic UI, Pinterest OAuth 2.0, Bootstrap
