Add Subscribe Form

--- a/index.html
+++ b/index.html
@@ -199,10 +199,12 @@
 				<br>
 				<br>
 				<br>
+				<br>
+				<br>
 				<div class='headings'>
 					Internships &amp; Experiences
 				</div>
-				<br>
+				<br><br><br>
 				<div class='container-fluid' align="center">
 					<div class="row">
 						<div class="col-md-12">
@@ -605,7 +607,10 @@
 					</div>
 				</div>
 				<br>
-				<div class='foot-text row'>
+			</section>
+			<section class="footer">
+				 <form style="padding:3px;text-align:center;" action="https://tinyletter.com/anirudhgoel" method="post" target="popupwindow" onsubmit="window.open('https://tinyletter.com/anirudhgoel', 'popupwindow', 'scrollbars=yes,width=800,height=600');return true"><p><label for="tlemail">Subscribe to Anirudh's Newsletter</label></p><p><input type="text" style="width:250px" name="email" id="tlemail" placeholder="Enter your email address" /></p><input type="hidden" value="1" name="embed"/><input type="submit" value="Subscribe" class="subscribe-button" /></form>
+				 <div class='foot-text row'>
 					<center>
 							Copyrights &copy; Anirudh Goel | 
 						<strong>
