--- a/index.html
+++ b/index.html
@@ -162,7 +162,10 @@
 		<div class="main">
 			<section class='page1'>
 				<br>
-				<img alt='Anirudh Goel' class='dp img-responsive' src="img/Anirudh.png">
+				<picture>
+					<source type="image/webp" srcset="img/Anirudh.webp">
+					<img src="img/Anirudh.png" alt="Anirudh Goel" class='dp img-responsive'>
+				</picture>
 				<div class='container-fluid'>
 					<br>
 					<br>
@@ -178,14 +181,7 @@
 						<div class='col-sm-10'>
 							<br>
 							<div class='intro-text'>
-								<!-- <strong> -->
-									<!-- <span style='font-size:24px;'>
-										Greetings!	Anirudh Goel welcomes you!
-									</span> -->
-								<!-- </strong> -->
-								<!-- Hey friend, currently studying Bachelors of Technology (B. Tech.) at Maharaja Agrasen Institute of Technology, I'm a follower of my instinct and passion which leads me to have considerable knowledge in the fields of Web Development, Graphic Designing, Blogging and more. -->
-								<!-- Hey, I am a final-year student of Bachelor of Technology (B.Tech.) in Information Technology (IT) at Maharaja Agrasen Institute of Technology. -->
-								Hey, welcome to Anirudh Goel's space on the Internet. <br>Anirudh is an IT Engineer and former CERN Summer Student. <br>He likes to code, is an avid reader, loves Coffee <i class="fa fa-coffee"></i> and his MacBook <i class="fa fa-laptop"></i>.
+								Hey, welcome to Anirudh Goel's space on the Internet. <br>Anirudh is an Software Engineer and currently works in the IT Department at CERN. <br>He likes to code, is an avid reader, loves Coffee <i class="fa fa-coffee"></i> and his MacBook <i class="fa fa-laptop"></i>.
 							</div>
 						</div>
 						<div class='col-sm-1'></div>
