--- a/index.html
+++ b/index.html
@@ -98,31 +98,31 @@
 							<ul class="dropdown-menu">
 								<li>
 									<a href="https://www.instagram.com/anirudhdelhi/" target='_blank'>
-										<i class='fa fa-instagram'></i>
+										<i class='fab fa-instagram'></i>
 										&nbsp;Instagram
 									</a>
 								</li>
 								<li>
 									<a href="https://www.facebook.com/profile.php?id=100008384688733" target='_blank'>
-										<i class='fa fa-facebook'></i>
+										<i class='fab fa-facebook-f'></i>
 										&nbsp;Facebook
 									</a>
 								</li>
 								<li>
 									<a href="https://twitter.com/AnirudhDelhi" target='_blank'>
-										<i class='fa fa-twitter'></i>
+										<i class='fab fa-twitter'></i>
 										&nbsp;Twitter
 									</a>
 								</li>
 								<li>
 									<a href="https://www.quora.com/profile/Anirudh-Goel-6" target='_blank'>
-										<i class='fa fa-quora'></i>
+										<i class='fab fa-quora'></i>
 										&nbsp;Quora
 									</a>
 								</li>
 								<li>
 									<a href="https://whythispage.wordpress.com/" target='_blank'>
-										<i class='fa fa-wordpress'></i>
+										<i class='fab fa-wordpress'></i>
 										&nbsp;Blog
 									</a>
 								</li>
@@ -132,25 +132,25 @@
 
 						<li>
 							<a href="https://in.linkedin.com/in/goelanirudh" target='_blank'>
-								<i class='fa fa-linkedin'></i>
+								<i class='fab fa-linkedin-in'></i>
 								&nbsp;LinkedIn
 							</a>
 						</li>
 						<li>
 							<a href="https://github.com/AnirudhGoel" target='_blank'>
-								<i class='fa fa-github'></i>
+								<i class='fab fa-github'></i>
 								&nbsp;Github
 							</a>
 						</li>
 						<li>
 							<a href="https://www.hackerrank.com/Anirudhgoel" target='_blank'>
-								<i class='fa fa-code'></i>
+								<i class='fas fa-code'></i>
 								&nbsp;Hackerrank
 							</a>
 						</li>
 						<li>
 							<a href="https://anirudhgoel.typeform.com/to/LUFqDL" data-mode="1" target="_blank">
-								<i class='fa fa-file-text'></i>
+								<i class='fas fa-file-alt'></i>
 								&nbsp;Contact Me
 							</a>
 						</li>
@@ -181,7 +181,7 @@
 						<div class='col-sm-10'>
 							<br>
 							<div class='intro-text'>
-								Hey, welcome to Anirudh Goel's space on the Internet. <br>Anirudh is an Software Engineer and currently works in the IT Department at CERN. <br>He likes to code, is an avid reader, loves Coffee <i class="fa fa-coffee"></i> and his MacBook <i class="fa fa-laptop"></i>.
+								Hey, welcome to Anirudh Goel's space on the Internet. <br>Anirudh is an Software Engineer and currently works in the IT Department at CERN. <br>He likes to code, is an avid reader, loves Coffee <i class="fas fa-coffee"></i> and his MacBook <i class="fas fa-laptop"></i>.
 							</div>
 						</div>
 						<div class='col-sm-1'></div>
@@ -620,7 +620,13 @@
 		<script src="//cdn.jsdelivr.net/npm/vivus@latest/dist/vivus.min.js"></script>
 		<script src="//ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 		<script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-		<script src="//use.fontawesome.com/768a40f80a.js"></script>
+
+		<!-- Typeform version 4 -->
+		<!-- <script src="//use.fontawesome.com/768a40f80a.js"></script> -->
+
+		<!-- Typeform version 5 -->
+		<script src="https://kit.fontawesome.com/a710005d2d.js" crossorigin="anonymous"></script>
+
 		<script src="//cdn.jsdelivr.net/parallax.js/1.4.2/parallax.min.js"></script>
 
 		<!-- EaseScroll doesn't support Safari as of now -->
