Update Blog link

--- a/index.html
+++ b/index.html
@@ -121,9 +121,9 @@
 									</a>
 								</li>
 								<li>
-									<a href="https://whythispage.wordpress.com/" target='_blank'>
-										<i class='fab fa-wordpress'></i>
-										&nbsp;Blog
+									<a href="https://www.hackerrank.com/Anirudhgoel" target='_blank'>
+										<i class='fas fa-code'></i>
+										&nbsp;Hackerrank
 									</a>
 								</li>
 							</ul>
@@ -143,9 +143,9 @@
 							</a>
 						</li>
 						<li>
-							<a href="https://www.hackerrank.com/Anirudhgoel" target='_blank'>
-								<i class='fas fa-code'></i>
-								&nbsp;Hackerrank
+							<a href="https://blog.anirudhgoel.me/" target='_blank'>
+								<i class="fas fa-pencil-alt"></i>
+								&nbsp;Blog
 							</a>
 						</li>
 						<li>
