--- a/index.html
+++ b/index.html
@@ -181,7 +181,12 @@
 						<div class='col-sm-10'>
 							<br>
 							<div class='intro-text'>
-								Hey, welcome to Anirudh Goel's space on the Internet. <br>Anirudh is an Software Engineer and currently works in the IT Department at CERN. <br>He likes to code, is an avid reader, loves Coffee <i class="fas fa-coffee"></i> and his MacBook <i class="fas fa-laptop"></i>.
+								<!-- Hey, welcome to Anirudh Goel's space on the Internet. <br>Anirudh is a Software Engineer and currently works in the IT Department at CERN. <br>He likes to code, is an avid reader, loves Coffee <i class="fas fa-coffee"></i> and his MacBook <i class="fas fa-laptop"></i>. -->
+
+								<br>
+
+								Hey, welcome to Anirudh's space on the Internet. Anirudh is a Software Engineer by Profession and an Entrepreneur at Heart. After his 9-6 at CERN, you can find him building new things, like <span class="typed-text"></span><span class="cursor">&nbsp;</span>.
+								<!-- Apart from work, you can find him making solo trips to new places (and probably making new friends there), baking or just pondering over things. -->
 							</div>
 						</div>
 						<div class='col-sm-1'></div>
@@ -608,7 +613,7 @@
 				 <form style="padding:3px;text-align:center;" action="https://tinyletter.com/anirudhgoel" method="post" target="popupwindow" onsubmit="window.open('https://tinyletter.com/anirudhgoel', 'popupwindow', 'scrollbars=yes,width=800,height=600');return true"><p><label for="tlemail">Subscribe to Anirudh's Newsletter</label></p><p><input type="text" style="width:250px" name="email" id="tlemail" placeholder="Enter your email address" /></p><input type="hidden" value="1" name="embed"/><input type="submit" value="Subscribe" class="subscribe-button" /></form>
 				 <div class='foot-text row'>
 					<center>
-							Copyrights &copy; Anirudh Goel | 
+							Copyrights &copy; Anirudh Goel |
 						<strong>
 							<a href="http://madewithlove.org.in" target="_blank" style="color:white;text-decoration:none;">Made with <span style="color: #f7403a;font-size: 22px">&hearts;</span> in India</a>
 						</strong>
