Remove ACM MAIT and other minor updations

--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
 				<div class='container-fluid' align="center">
 					<div class="row">
 						<div class="col-md-12">
-							<div class="cern-intern-box wow fadeInUp">
+							<div class="intern-box wow fadeInUp">
 								<div class="row">
 									<div class="col-sm-4">
 										<div class='intern-panel-image'>
@@ -241,10 +241,9 @@
 							</div>
 						</div>
 					</div>
-					<br>
 					<div class="row">
 						<div class="col-md-12">
-							<div class="cern-intern-box wow fadeInUp">
+							<div class="intern-box wow fadeInUp">
 								<div class="row">
 									<div class="col-sm-4">
 										<div class='intern-panel-image'>
@@ -262,14 +261,14 @@
 											<br><br>
 											<ul>
 												<li>Developed the <strong>Web Notification Infrastructure</strong> for the future <strong>ALICE O<sup>2</sup> System.</strong></li>
-												<li>The infrastructure can push the notification via 3 different means of transport:</li>
+												<li>The infrastructure can push notifications via 3 different means of transport:</li>
 												<ul>
 													<li>Using Web Sockets,</li>
 													<li>Using Service Workers (Chrome, Mozilla and other major browsers),</li>
 													<li>Using Apple Push Notification Service (APNS) for Safari.</li>
 												</ul>
-												<li>Gave a presentation during ALICE Work Package 8 meeting on ‘Web Push Notifications’. This presentation included a brief introduction of Push Notifications, Service Workers and a live demo of Push Notifications in browsers that support Service Workers.</li>
-												<li>Covered the code with Mocha tests, with coverage as high as 91.3%, provided with JSDoc documentation and used Travis for continuous integration.</li>
+												<li>Presented this infrastructure with a live demo in the ALICE Work Package 8 meeting.</li>
+												<li>Covered the code with Mocha tests (91.3% coverage), provided with JSDoc documentation and used Travis for continuous integration.</li>
 												<li>Created a unified notification trigger which can send notifications to both, browsers supporting service workers and to APNS with a single line terminal command.</li>
 												<li>All of this code and corresponding documentation is available on ALICE <a href="https://github.com/AliceO2Group/ControlGui" target="_blank">ControlGUI</a> and <a href="https://github.com/AliceO2Group/Gui" target="_blank">GUI</a> repository.</li>
 												<li>The Project Report can be found <a href="https://cds.cern.ch/record/2282564/files/Project%20Report%20Final.pdf" target="_blank">here</a>.</li>
@@ -281,8 +280,8 @@
 						</div>
 					</div>
 					<div class="row">
-						<div class="col-md-6">
-							<div class="intern-box wow fadeInLeft">
+						<div class="col-md-12">
+							<div class="intern-box wow fadeInUp">
 								<div class="row">
 									<div class="col-sm-4">
 										<div class='intern-panel-image'>
@@ -306,33 +305,8 @@
 											</div>
 											<br><br>
 											<ul>
-												<li>Hosted a Mozilla Awareness session at <strong>Hack@NSIT</strong> Hackathon.</li>
-												<li>My own <a href="https://onefirefoxblog.wordpress.com/">Mozilla Blog</a> to present my experiences.</li>
-												<li>As the <strong>Club Lead</strong>, inspired my fellow classmates to join Mozilla.</li>
+												Spread awareness about <a href="https://www.mozilla.org/en-US/mission/" target="_blank">Mozilla's Mission</a> and contributions through <a href="https://onefirefoxblog.wordpress.com/" target="_blank">awareness sessions</a>, events and more.
 											</ul>
-										</div>
-									</div>
-								</div>
-							</div>
-						</div>
-						<div class="col-md-6">
-							<div class="intern-box wow fadeInRight">
-								<div class="row">
-									<div class="col-sm-4">
-										<div class='intern-panel-image'>
-											<img src="img/intern/ACM.png" alt='ACM' class='intern-img img-responsive'>
-										</div>
-									</div>
-									<div class="col-sm-8" align="left">
-										<div class="intern-panel-body">
-											<div class="intern-box-heading" align="center">
-												<div class="org-name"><a href="http://mait.acm.org/" target="_blank"><strong>ACM</strong> MAIT</a></div>
-												<br>
-												<div class="col-sm-6 intern-post"><strong>Full Stack Developer</strong></div>
-												<div class="col-sm-6 intern-time">June '16 - Apr '17</div>
-											</div>
-											<br><br>
-											This is the ACM chapter of my college. Here I was responsible for the development, deployment and maintenance of the website. I made the <a href="http://mait.acm.org/">Home Page</a> and <a href="http://mait.acm.org/contact_us.html">Contact Us</a> page and deployed the website to our server. The major challenges we overcame while remaking of the site were to make it completely responsive and keep its footprint to minimum.
 										</div>
 									</div>
 								</div>
